package ChanceCards;

public abstract class ChanceCard {
    protected String name;
}
