@startuml
@startuml
skinparam linetype polyline
skinparam linetype ortho
left to right direction

package models {

    package fields{
        abstract class Field
    }
    package chanceCards{
        class Deck {
        }
        abstract class ChanceCard {}

    }
    package dto {
        interface IGameStateDTO{}
        class GameStateDTO {}
    }

}
interface ActionListener {
}

class controllers.GUIConverter {
}
class controllers.GameController {

}
class controllers.FieldController {

}
class models.Language {

}

class models.Player {

}

class ui.guiController{

}

class controllers.PlayerController {

}
class controllers.DiceHolder {

}
class controllers.StartValues {
}

class models.Character {

}



class models.Balance {
}

class models.Die {
}


class controllers.CSVReader {
}

'Models ejere
models.Player o-down- models.Character
models.Player o- models.Balance
models.Player -- ChanceCard

controllers.PlayerController <.. models.Language : use
ui.guiController <.. models.Language : use
controllers.FieldController <.. models.Language : use

'Controllers ejere
controllers.DiceHolder"1" o- "2"models.Die
controllers.PlayerController "1" o- "3..6" models.Player
controllers.FieldController"1 #" o- "40" Field
Deck"1" o-- "46" ChanceCard

IGameStateDTO <|.. GameStateDTO
IGameStateDTO -- controllers.PlayerController
IGameStateDTO -- controllers.FieldController
IGameStateDTO -- Deck
IGameStateDTO -- controllers.DiceHolder
IGameStateDTO -- ui.guiController
IGameStateDTO -- models.Player

controllers.GameController <|.up. ActionListener
controllers.GameController o- controllers.PlayerController
controllers.GameController o- controllers.FieldController
controllers.GameController o- Deck
controllers.GameController o- controllers.DiceHolder
controllers.GameController o- GameStateDTO
controllers.GameController o- ui.guiController



controllers.FieldController -- controllers.CSVReader
Deck -- controllers.CSVReader

controllers.PlayerController <.. controllers.StartValues : use
ui.guiController <.. controllers.StartValues : use
ui.guiController <.. controllers.GUIConverter : use


IGameStateDTO -- Field
IGameStateDTO -- ChanceCard
@enduml